ParserExample.java
/* Generated By:JavaCC: Do not edit this line. ParserExample.java */
import java.io.*;

public class ParserExample implements ParserExampleConstants {
        public static void main(String[] args) throws ParseException, TokenMgrError {
                ParserExample t=null;
                if (args.length == 0) {
                        t = new ParserExample(System.in);
                } else if (args.length == 1) {
                        // lê do arquivo cujo nome esta em args[0]
                        try {
                                FileInputStream fis = new FileInputStream(args[0]);
                                t = new ParserExample(fis);
                        } catch (Throwable e) {
                                System.out.println("Erro de Sintaxe: " + e.getMessage());
                                e.printStackTrace();
                        }
                } else {
                        // Formato de entrada invalido
                        System.out.println("Formato de entrada invalido.");
                        return;
                }
                t.bc();
        }

/* GRAMMAR START */

/* Loop inicial P1 */
  final public void bc() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SQRT:
      case IF:
      case WHILE:
      case FOR:
      case PRINT:
      case BREAK:
      case CONTINUE:
      case LENGTH:
      case SCALE:
      case IBASE:
      case OBASE:
      case LAST:
      case RETORNO:
      case NUM:
      case STRING:
      case ID:
      case SUB:
      case INC:
      case DEC:
      case NOT:
      case DOT:
      case CHAVEE:
      case PARE:
      case SEMICOLON:
      case LINEBREAK:
        comando();
        break;
      case DEFINE:
        definicao_de_funcao();
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SQRT:
      case IF:
      case WHILE:
      case FOR:
      case PRINT:
      case BREAK:
      case CONTINUE:
      case LENGTH:
      case SCALE:
      case IBASE:
      case OBASE:
      case LAST:
      case DEFINE:
      case RETORNO:
      case NUM:
      case STRING:
      case ID:
      case SUB:
      case INC:
      case DEC:
      case NOT:
      case DOT:
      case CHAVEE:
      case PARE:
      case SEMICOLON:
      case LINEBREAK:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(QUIT);
  }

/* Comandos P2 */
  final public void comando() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SQRT:
    case LENGTH:
    case SCALE:
    case IBASE:
    case OBASE:
    case LAST:
    case NUM:
    case STRING:
    case ID:
    case SUB:
    case INC:
    case DEC:
    case NOT:
    case DOT:
    case PARE:
      E();
      break;
    case CHAVEE:
      comando_composto();
      break;
    case IF:
      E_IF();
      break;
    case WHILE:
      E_WHILE();
      break;
    case FOR:
      E_FOR();
      break;
    case BREAK:
      jj_consume_token(BREAK);
      break;
    case SEMICOLON:
    case LINEBREAK:
      separador();
      break;
    case CONTINUE:
      jj_consume_token(CONTINUE);
      break;
    case PRINT:
      E_PRINT();
      break;
    case RETORNO:
      E_RETORNO();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void comando_composto() throws ParseException {
    jj_consume_token(CHAVEE);
    lista_de_comandos();
    jj_consume_token(CHAVED);
  }

  final public void lista_de_comandos() throws ParseException {
    label_2:
    while (true) {
      comando();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SQRT:
      case IF:
      case WHILE:
      case FOR:
      case PRINT:
      case BREAK:
      case CONTINUE:
      case LENGTH:
      case SCALE:
      case IBASE:
      case OBASE:
      case LAST:
      case RETORNO:
      case NUM:
      case STRING:
      case ID:
      case SUB:
      case INC:
      case DEC:
      case NOT:
      case DOT:
      case CHAVEE:
      case PARE:
      case SEMICOLON:
      case LINEBREAK:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
    }
  }

  final public void separador() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMICOLON:
      jj_consume_token(SEMICOLON);
      break;
    case LINEBREAK:
      jj_consume_token(LINEBREAK);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void E_IF() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(PARE);
    E();
    jj_consume_token(PARD);
    comando();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      comando();
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
  }

  final public void E_WHILE() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(PARE);
    E();
    jj_consume_token(PARD);
    comando();
  }

  final public void E_FOR() throws ParseException {
    jj_consume_token(FOR);
    jj_consume_token(PARE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SQRT:
    case LENGTH:
    case SCALE:
    case IBASE:
    case OBASE:
    case LAST:
    case NUM:
    case STRING:
    case ID:
    case SUB:
    case INC:
    case DEC:
    case NOT:
    case DOT:
    case PARE:
      E();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(SEMICOLON);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SQRT:
    case LENGTH:
    case SCALE:
    case IBASE:
    case OBASE:
    case LAST:
    case NUM:
    case STRING:
    case ID:
    case SUB:
    case INC:
    case DEC:
    case NOT:
    case DOT:
    case PARE:
      E();
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(SEMICOLON);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SQRT:
    case LENGTH:
    case SCALE:
    case IBASE:
    case OBASE:
    case LAST:
    case NUM:
    case STRING:
    case ID:
    case SUB:
    case INC:
    case DEC:
    case NOT:
    case DOT:
    case PARE:
      E();
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(PARD);
    comando();
  }

  final public void E_PRINT() throws ParseException {
    jj_consume_token(PRINT);
    lista_de_E();
  }

  final public void lista_de_E() throws ParseException {
    E();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      E();
    }
  }

/* Comandos P2 */
  final public void E() throws ParseException {
    E1();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_4;
      }
      jj_consume_token(OR);
      E1();
    }
  }

  final public void E1() throws ParseException {
    E2();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_5;
      }
      jj_consume_token(AND);
      E2();
    }
  }

  final public void E2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      jj_consume_token(NOT);
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    E3();
  }

  final public void E3() throws ParseException {
    E4();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUAL:
      case MINOREQ:
      case GREATEREQ:
      case DIF:
      case MINOR:
      case GREATER:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUAL:
        jj_consume_token(EQUAL);
        break;
      case MINOREQ:
        jj_consume_token(MINOREQ);
        break;
      case GREATEREQ:
        jj_consume_token(GREATEREQ);
        break;
      case DIF:
        jj_consume_token(DIF);
        break;
      case MINOR:
        jj_consume_token(MINOR);
        break;
      case GREATER:
        jj_consume_token(GREATER);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      E4();
    }
  }

  final public void E4() throws ParseException {
    E5();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATRIBUICAO:
    case ATRIBUICAOSUM:
    case ATRIBUICAOSUB:
    case ATRIBUICAOMUL:
    case ATRIBUICAODIV:
    case ATRIBUICAOMOD:
    case ATRIBUICAOPOW:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ATRIBUICAO:
        jj_consume_token(ATRIBUICAO);
        break;
      case ATRIBUICAODIV:
        jj_consume_token(ATRIBUICAODIV);
        break;
      case ATRIBUICAOMOD:
        jj_consume_token(ATRIBUICAOMOD);
        break;
      case ATRIBUICAOMUL:
        jj_consume_token(ATRIBUICAOMUL);
        break;
      case ATRIBUICAOPOW:
        jj_consume_token(ATRIBUICAOPOW);
        break;
      case ATRIBUICAOSUB:
        jj_consume_token(ATRIBUICAOSUB);
        break;
      case ATRIBUICAOSUM:
        jj_consume_token(ATRIBUICAOSUM);
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      E4();
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
  }

  final public void E5() throws ParseException {
    E6();
    label_7:
    while (true) {
      if (jj_2_1(3)) {
        ;
      } else {
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SUM:
        jj_consume_token(SUM);
        break;
      case SUB:
        jj_consume_token(SUB);
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      E6();
    }
  }

  final public void E6() throws ParseException {
    E7();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MUL:
      case DIV:
      case MOD:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DIV:
        jj_consume_token(DIV);
        break;
      case MOD:
        jj_consume_token(MOD);
        break;
      case MUL:
        jj_consume_token(MUL);
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      E7();
    }
  }

  final public void E7() throws ParseException {
    E8();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case POW:
      jj_consume_token(POW);
      E7();
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
  }

  final public void E8() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUB:
      jj_consume_token(SUB);
      break;
    default:
      jj_la1[21] = jj_gen;
      ;
    }
    E9();
  }

  final public void E9() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INC:
    case DEC:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INC:
        jj_consume_token(INC);
        break;
      case DEC:
        jj_consume_token(DEC);
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    E9_postfix();
  }

  final public void E9_postfix() throws ParseException {
    E10();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INC:
    case DEC:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INC:
        jj_consume_token(INC);
        break;
      case DEC:
        jj_consume_token(DEC);
        break;
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[25] = jj_gen;
      ;
    }
  }

  final public void E10() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUM:
      jj_consume_token(NUM);
      break;
    case PARE:
      jj_consume_token(PARE);
      E();
      jj_consume_token(PARD);
      break;
    case SQRT:
      jj_consume_token(SQRT);
      jj_consume_token(PARE);
      E();
      jj_consume_token(PARD);
      break;
    case LENGTH:
      jj_consume_token(LENGTH);
      jj_consume_token(PARE);
      E();
      jj_consume_token(PARD);
      break;
    default:
      jj_la1[26] = jj_gen;
      if (jj_2_2(2)) {
        jj_consume_token(SCALE);
        jj_consume_token(PARE);
        E();
        jj_consume_token(PARD);
      } else if (jj_2_3(2)) {
        chamada_de_funcao();
      } else if (jj_2_4(2)) {
        jj_consume_token(ID);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          jj_consume_token(ID);
          jj_consume_token(COLCHE);
          E();
          jj_consume_token(COLCHD);
          break;
        case STRING:
          jj_consume_token(STRING);
          break;
        case IBASE:
          jj_consume_token(IBASE);
          break;
        case OBASE:
          jj_consume_token(OBASE);
          break;
        case SCALE:
          jj_consume_token(SCALE);
          break;
        case LAST:
          jj_consume_token(LAST);
          break;
        case DOT:
          jj_consume_token(DOT);
          break;
        default:
          jj_la1[27] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  final public void chamada_de_funcao() throws ParseException {
    jj_consume_token(ID);
    jj_consume_token(PARE);
    lista_de_E();
    jj_consume_token(PARD);
  }

  final public void definicao_de_funcao() throws ParseException {
    jj_consume_token(DEFINE);
    jj_consume_token(ID);
    jj_consume_token(PARE);
    lista_de_var();
    jj_consume_token(PARD);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMICOLON:
    case LINEBREAK:
      separador();
      break;
    default:
      jj_la1[28] = jj_gen;
      ;
    }
    jj_consume_token(CHAVEE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMICOLON:
    case LINEBREAK:
      separador();
      break;
    default:
      jj_la1[29] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AUTO:
      jj_consume_token(AUTO);
      lista_de_var();
      separador();
      break;
    default:
      jj_la1[30] = jj_gen;
      ;
    }
    lista_de_comandos();
    jj_consume_token(CHAVED);
  }

  final public void E_RETORNO() throws ParseException {
    if (jj_2_5(2)) {
      jj_consume_token(RETORNO);
      jj_consume_token(PARE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SQRT:
      case LENGTH:
      case SCALE:
      case IBASE:
      case OBASE:
      case LAST:
      case NUM:
      case STRING:
      case ID:
      case SUB:
      case INC:
      case DEC:
      case NOT:
      case DOT:
      case PARE:
        E();
        break;
      default:
        jj_la1[31] = jj_gen;
        ;
      }
      jj_consume_token(PARD);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RETORNO:
        jj_consume_token(RETORNO);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SQRT:
        case LENGTH:
        case SCALE:
        case IBASE:
        case OBASE:
        case LAST:
        case NUM:
        case STRING:
        case ID:
        case SUB:
        case INC:
        case DEC:
        case NOT:
        case DOT:
        case PARE:
          E();
          break;
        default:
          jj_la1[32] = jj_gen;
          ;
        }
        break;
      default:
        jj_la1[33] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void lista_de_var() throws ParseException {
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COLCHE:
      jj_consume_token(COLCHE);
      jj_consume_token(COLCHD);
      break;
    default:
      jj_la1[34] = jj_gen;
      ;
    }
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[35] = jj_gen;
        break label_9;
      }
      jj_consume_token(COMMA);
      jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COLCHE:
        jj_consume_token(COLCHE);
        jj_consume_token(COLCHD);
        break;
      default:
        jj_la1[36] = jj_gen;
        ;
      }
    }
  }
